--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,2 +1,4 @@
-<h1>About Bikes Berlin</h1>
-<h2>This app will help you find and purchase the best used bikes in Berlin.</h2>
+<div class="container-fluid">
+  <h1>About Bikes Bristol</h1>
+  <h2>This app will help you find and purchase the best used bikes in Berlin.</h2>
+</div> <!--end container-fluid -->
