--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,8 +1,10 @@
-<h1>Contact Bikes Berlin</h1>
-<h2>There are several ways to contact us:</h2>
-<h3>email</h3>
-<p>email form here</p>
-<h3>phone</h3>
-<p>xxx-xxx-xxxx</p>
-<h3>social media</h3>
-<p>Social Media Links Here </p>
+<div class="container-fluid contact-page">
+  <h1>Contact Bikes Bristol</h1>
+  <h2>There are several ways to contact us:</h2>
+  <p>email</p>
+  <h3>email form here</h3>
+  <p>phone</p>
+  <h3>401-555-1212</h3>
+  <p>social media</p>
+  <%= image_tag("social-media-icons.png", class: "img-responsive social-media-icons") %>
+</div> <!-- end container-fluid -->
