--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,3 +1,10 @@
-<h1>Welcome to Bike Berlin</h1>
-<h2>Your source for used bikes in Berlin</h2>
-<%= image_tag("sport-green-bike.jpg", class: "img-responsive lpimage") %>
+<div class="land-page">
+  <h1>Welcome to Bike Bristol</h1>
+  <h2>Your source for used bikes in Bristol</h2>
+  <div class="col-md-3">
+    <!-- creating blank space to move image over -->
+  </div>
+  <div class="col-md-6 lpimage">
+    <%= image_tag("sport-green-bike.jpg", class: "img-responsive") %>
+  </div> <!-- end col-md-6 -->
+</div> <!--end land-page -->
