--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
 
     <footer class="navbar-fixed-bottom">
       <div class="container-fluid sticky-footer">
-        <p> &copy 2015 Bike Bristol ~ 123 Filler St Bristol RI 02809 ~ 401-555-1212 <p>
+        <p> &copy 2016 Yummy Cookies ~ 123 Filler St Coventry RI 02816 ~ 401-555-1212 <p>
       </div> <!-- end container-fluid -->
     </footer>
   </body>
