--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,4 +1,7 @@
 <div class="container-fluid">
-  <h1>About Bikes Bristol</h1>
-  <h2>This app will help you find and purchase the best used bikes in Berlin.</h2>
+  <%= image_tag("cookie-border.jpg", class: "img-responsive cookie-border") %>
+  <h1>About Yummy Cookies!</h1>
+  <h3> Yummy Cookies! is a web app to demonstrate my proficiency with Ruby on Rails.</h3>
+  <h3> I also love to bake and eat cookies. </h3>
+  <h2>Who doesn't love yummy cookies!</h2>
 </div> <!--end container-fluid -->
