--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,5 +1,5 @@
 <div class="container-fluid contact-page">
-  <h1>Contact Bikes Bristol</h1>
+  <h1>Contact Yummy Cookies!</h1>
   <h2>There are several ways to contact us:</h2>
   <p>email</p>
   <h3>email form here</h3>
