--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,10 +1,7 @@
 <div class="land-page">
   <h1>Yummy Cookies!</h1>
   <h2>Your source for the best yummy cookies around!</h2>
-  <div class="col-md-3">
-    <!-- creating blank space to move image over -->
-  </div>
-  <div class="col-md-6 lpimage">
+  <div class="col-md-offset-3 col-md-6 lpimage">
     <%= image_tag("choc-chip.jpg", class: "img-responsive") %>
   </div> <!-- end col-md-6 -->
 </div> <!--end land-page -->
