--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -1,3 +1,11 @@
 // Place all the styles related to the products controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.product-name {
+  font-family: Papyrus, Georgia, serif;
+  font-size: 2em;
+}
+.product-desc {
+  font-family: Palatino, Georgia, serif;
+  font-size: 1.5em;
+}
