--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -15,9 +15,9 @@
   <tbody>
     <% @products.each do |product| %>
       <tr>
-        <td><%= product.name %></td>
-        <td><%= product.description %></td>
-        <td><%= product.image_url %></td>
+        <td class="product-name"><%= product.name %></td>
+        <td><%= image_tag(product.image_url, class: "img-responsive") %></td>
+        <td class="product-desc"><%= product.description %></td>
         <td><%= link_to 'Show', product %></td>
         <td><%= link_to 'Edit', edit_product_path(product) %></td>
         <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
