--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -4,8 +4,21 @@
 .product-name {
   font-family: Papyrus, Georgia, serif;
   font-size: 2em;
+  color: saddlebrown;
 }
 .product-desc {
   font-family: Palatino, Georgia, serif;
   font-size: 1.5em;
+  margin: 1% 0;
+  color: saddlebrown;
+}
+.prod-img {
+  height: 100%;
+}
+.edit-links {
+  margin: 1% 0;
+}
+.new-prod-link {
+  padding: 5% 0;
+
 }
