--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,31 +1,37 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Products</h1>
+<h1>Yummy Cookies!</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Description</th>
-      <th>Image url</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<div class="row">
+  <% @products.each do |product| %>
+    <h2 class="product-name col-md-4"><%= product.name %></h2>
+  <% end %>
+</div>
 
-  <tbody>
-    <% @products.each do |product| %>
-      <tr>
-        <td class="product-name"><%= product.name %></td>
-        <td><%= image_tag(product.image_url, class: "img-responsive") %></td>
-        <td class="product-desc"><%= product.description %></td>
-        <td><%= link_to 'Show', product %></td>
-        <td><%= link_to 'Edit', edit_product_path(product) %></td>
-        <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+<div class="row">
+  <% @products.each do |product| %>
+  <%= image_tag(product.image_url, class: "col-md-4 img-responsive prod-img") %>
+  <% end %>
+</div>
+
+<div class="row">
+  <% @products.each do |product| %>
+  <p class="product-desc col-md-4"><%= product.description %></p>
+  <% end %>
+</div>
+
+<div class="row">
+  <% @products.each do |product| %>
+  <div>
+    <p class="col-md-4 edit-links">
+    <%= link_to 'Show', product %>
+    <%= link_to 'Edit', edit_product_path(product) %>
+    <%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %>
+    </p>
     <% end %>
-  </tbody>
-</table>
+  </div>
+</div>
 
-<br>
-
-<%= link_to 'New Product', new_product_path %>
+<div>
+<p class="new-prod-link"><%= link_to 'New Product', new_product_path %></p>
+</div>
