--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -21,7 +21,7 @@ h3,
 p {
   text-align: center;
   font-family: Palatino, Georgia, serif;
-  color: darkblue;
+  color: #8B4513;
 }
 
 .sticky-footer p{
