--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,37 +1,25 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Yummy Cookies!</h1>
+<div class="col-md-12">
+  <%= image_tag("yc-logo.png", class: "img-responsive col-md-4 col-md-offset-4") %>
+</div>
 
-<div class="row">
+<div class="product-page">
   <% @products.each do |product| %>
-    <h2 class="product-name col-md-4"><%= product.name %></h2>
+    <div class="col-md-3 products">
+      <h2 class="product-name"><%= product.name %></h2>
+      <%= image_tag(product.image_url, class: "img-responsive prod-img") %>
+      <p class="product-desc"><%= product.description %></p>
+      <div class="edit-prod-links">
+        <%= link_to 'Show', product %>
+        <%= link_to 'Edit', edit_product_path(product) %>
+        <%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %>
+      </div> <!--end edit-prod-links -->
+    </div> <!--end products -->
   <% end %>
-</div>
 
-<div class="row">
-  <% @products.each do |product| %>
-  <%= image_tag(product.image_url, class: "col-md-4 img-responsive prod-img") %>
-  <% end %>
-</div>
+  <div class="new-prod-link col-md-12">
+    <%= link_to 'New Product', new_product_path %>
+  </div> <!-- end new-prod-link -->
 
-<div class="row">
-  <% @products.each do |product| %>
-  <p class="product-desc col-md-4"><%= product.description %></p>
-  <% end %>
-</div>
-
-<div class="row">
-  <% @products.each do |product| %>
-  <div>
-    <p class="col-md-4 edit-links">
-    <%= link_to 'Show', product %>
-    <%= link_to 'Edit', edit_product_path(product) %>
-    <%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %>
-    </p>
-    <% end %>
-  </div>
-</div>
-
-<div>
-<p class="new-prod-link"><%= link_to 'New Product', new_product_path %></p>
-</div>
+</div> <!-- end product-page -->
