--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,7 +1,10 @@
 <div class="container-fluid">
-  <%= image_tag("cookie-border.jpg", class: "img-responsive cookie-border") %>
-  <h1>About Yummy Cookies!</h1>
+  <div class="col-md-12">
+    <%= image_tag("yc-logo.png", class: "img-responsive col-md-4 col-md-offset-4") %>
+  </div>
+
   <h3> Yummy Cookies! is a web app to demonstrate my proficiency with Ruby on Rails.</h3>
   <h3> I also love to bake and eat cookies. </h3>
   <h2>Who doesn't love yummy cookies!</h2>
+  <%= image_tag("cookie-border.jpg", class: "img-responsive cookie-border") %>
 </div> <!--end container-fluid -->
