--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,5 +1,9 @@
 <div class="container-fluid contact-page">
-  <h1>Contact Yummy Cookies!</h1>
+  <div class="col-md-12">
+    <%= image_tag("yc-logo.png", class: "img-responsive col-md-4 col-md-offset-4") %>
+  </div>
+
+  <h1>Contact Us!</h1>
   <h2>There are several ways to contact us:</h2>
   <p>email</p>
   <h3>email form here</h3>
