--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,5 +1,7 @@
 <div class="land-page">
-  <h1>Yummy Cookies!</h1>
+  <div class="col-md-12">
+    <%= image_tag("yc-logo.png", class: "img-responsive col-md-4 col-md-offset-4") %>
+  </div>
   <h2>Your source for the best yummy cookies around!</h2>
   <div class="col-md-offset-3 col-md-6 lpimage">
     <%= image_tag("choc-chip.jpg", class: "img-responsive") %>
