--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -6,21 +6,28 @@
   margin-left: 6%;
 }
 .prod-logo {
-  
+
 }
 .product-name {
   font-family: Papyrus, Georgia, serif;
   font-size: 2em;
   color: saddlebrown;
 }
+// .desc-height {
+//   height: 85px;
+// }
 .product-desc {
   font-family: Palatino, Georgia, serif;
   font-size: 1.5em;
+  line-height: 1.2em;
   margin: 4% 0;
   color: saddlebrown;
 }
 .prod-img {
   height: 100%;
+  margin: 0 auto;
+}
+.p-margin-center {
   margin: 0 auto;
 }
 .edit-prod-links {
