--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -10,6 +10,8 @@
       <h2 class="product-name"><%= product.name %></h2>
       <%= image_tag(product.image_url, class: "img-responsive prod-img") %>
       <p class="product-desc"><%= product.description %></p>
+      <p class="p-margin-center price">Price per dozen $ <%= product.price %></p>
+      <p class="p-margin-center price-color-code">price color code: <%= product.colour %></p>
       <div class="edit-prod-links">
         <%= link_to 'Show', product %>
         <%= link_to 'Edit', edit_product_path(product) %>
