--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -35,3 +35,15 @@ p {
 .cookie-border {
   margin: auto;
 }
+
+// landing page carousel
+.carousel {
+  margin-top: 1%;
+}
+.carousel-img {
+  padding-left: 16%;
+}
+.carousel-indicators {
+  left: 20%;
+  margin: 50% 0 0 0;
+}
