--- a/app/views/static_pages/landing_page.html.erb
+++ b/app/views/static_pages/landing_page.html.erb
@@ -2,11 +2,37 @@
   <div class="col-md-12">
     <%= image_tag("yc-logo.png", class: "img-responsive col-md-4 col-md-offset-4") %>
   </div>
-  <h2>Your source for the best yummy cookies around!</h2>
-  <div class="col-md-offset-3 col-md-6 lpimage">
-    <h2> Featured Product </h2>
-    <%= @featured_product.name %>
-    <%= image_tag(@featured_product.image_url, class: "img-responsive") %>
+  <h2 class="">Your source for the best yummy cookies around!</h2>
+  <div id="carousel-example-generic" class="carousel slide col-md-4 col-md-offset-4" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+  </ol>
 
-  </div> <!-- end col-md-6 -->
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner" role="listbox">
+    <% @products.each do |product| %>
+    <div class="item <%= "active" if product == @products.first %>">
+      <div class="carousel-img">
+        <%= image_tag(product.image_url) %>
+      </div>
+      <div class="carousel-caption">
+        <%= product.name %>
+      </div>
+    </div>
+    <% end %>
+  </div>
+
+  <!-- Controls -->
+  <!-- <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a> -->
+</div>
 </div> <!--end land-page -->
