--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,9 +17,10 @@
   <body>
     <nav class="navbar navbar-fixed-top nav-menu">
       <ul class="nav-items">
-        <li> Home </li>
-        <li> About </li>
-        <li> Contact </li>
+        <li> <a href="/static_pages/landing_page"> Home </a></li>
+        <li> <a href="/static_pages/about"> About </a></li>
+        <li> <a href="/products"> Products </a></li>
+        <li> <a href="/static_pages/contact"> Contact </a></li>
       </ul>
     </nav>
 
