--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,14 +1,17 @@
 <div class="container-fluid contact-page">
-  <div class="col-md-12">
+  <div class="col-md-12 yc-logo">
     <%= image_tag("yc-logo.png", class: "img-responsive col-md-4 col-md-offset-4") %>
   </div>
 
-  <h1>Contact Us!</h1>
-  <h2>There are several ways to contact us:</h2>
-  <p>email</p>
-  <h3>email form here</h3>
-  <p>phone</p>
-  <h3>401-555-1212</h3>
-  <p>social media</p>
-  <%= image_tag("social-media-icons.png", class: "img-responsive social-media-icons") %>
+  <h1> Yummy Cookies! is a web app to demonstrate my proficiency with Ruby on Rails.</h1>
+
+  <h2 class="brown-h2"> For more information about me and other projects I have done please <a href="http://tracylynhall.bitballoon.com/" target="_blank"> visit my website! </a> </h2>
+
+  <div class="contact-form">
+    <h2> To contact me about building a website for you send me a message below: </h2>
+    <div class="col-md-6 col-md-offset-3">
+      <script type="text/javascript" src="https://form.jotform.com/jsform/70086699021156"></script>
+    </div>
+  </div> <!-- end contact form -->
+
 </div> <!-- end container-fluid -->
