--- a/app/views/static_pages/landing_page.html.erb
+++ b/app/views/static_pages/landing_page.html.erb
@@ -3,36 +3,39 @@
     <%= image_tag("yc-logo.png", class: "img-responsive col-md-4 col-md-offset-4") %>
   </div>
   <h2 class="">Your source for the best yummy cookies around!</h2>
+  <h2 class="brown-h2"> Featured Products </h2>
   <div id="carousel-example-generic" class="carousel slide col-md-4 col-md-offset-4" data-ride="carousel">
   <!-- Indicators -->
-  <ol class="carousel-indicators">
-    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-  </ol>
+    <ol class="carousel-indicators">
+      <% @products.each do |product| %>
+      <li data-target="#carousel-example-generic" data-slide-to="<%= product.id %>" class="<%= "active" if product == @products.first %>"></li>
+      <!-- <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+      <li data-target="#carousel-example-generic" data-slide-to="2"></li> -->
+      <% end %>
+    </ol>
 
-  <!-- Wrapper for slides -->
-  <div class="carousel-inner" role="listbox">
-    <% @products.each do |product| %>
-    <div class="item <%= "active" if product == @products.first %>">
-      <div class="carousel-img">
-        <%= image_tag(product.image_url) %>
-      </div>
-      <div class="carousel-caption">
-        <%= product.name %>
-      </div>
-    </div>
-    <% end %>
-  </div>
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner" role="listbox">
+      <% @products.each do |product| %>
+      <div class="item <%= "active" if product == @products.first %>">
+        <div class="carousel-img">
+          <%= image_tag(product.image_url) %>
+        </div> <!-- end carousel-img -->
+        <div class="carousel-caption">
+          <%= product.name %>
+        </div> <!-- end carousel-caption -->
+      </div> <!-- end item -->
+      <% end %>
+    </div> <!-- end carousel-inner -->
 
-  <!-- Controls -->
-  <!-- <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a> -->
-</div>
+    <!-- Controls -->
+    <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div> <!-- end carousel-example-generic -->
 </div> <!--end land-page -->
