--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -4,7 +4,6 @@ body {
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 14px;
   line-height: 18px;
-  // margin: 0 10px;
 }
 
 p, ol, ul, td {
@@ -21,15 +20,15 @@ pre {
 }
 
 a {
-  color: #000;
+  color: #darkgreen;
 
   &:visited {
-    color: #666;
+    color: #8B4513;
   }
 
   &:hover {
     color: #fff;
-    background-color: #000;
+    background-color: darkgreen;
   }
 }
 
