--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,3 +1,4 @@
+<!-- Display Product info -->
 <div class="col-md-3 products">
   <h2 class="product-name"><%= product.name %></h2>
   <%= image_tag(product.image_url, class: "img-responsive prod-img") %>
