--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,10 +17,10 @@
   <body>
     <nav class="navbar navbar-fixed-top nav-menu">
       <ul class="nav-items">
-        <li> <a href="/static_pages/landing_page"> Home </a></li>
-        <li> <a href="/static_pages/about"> About </a></li>
-        <li> <a href="/products"> Products </a></li>
-        <li> <a href="/static_pages/contact"> Contact </a></li>
+        <li> <%= link_to "Home", static_pages_landing_page_path %> </li>
+        <li> <%= link_to "About", static_pages_about_path %> </li>
+        <li> <%= link_to "Products", products_url %> </li>
+        <li> <%= link_to "Contact", static_pages_contact_path %> </li>
       </ul>
     </nav>
 
