--- a/app/views/static_pages/landing_page.html.erb
+++ b/app/views/static_pages/landing_page.html.erb
@@ -4,7 +4,7 @@
   </div>
   <h2 class="">Your source for the best yummy cookies around!</h2>
   <h2 class="brown-h2"> Featured Products </h2>
-  <div id="carousel-example-generic" class="carousel slide col-md-4 col-md-offset-4" data-ride="carousel">
+  <div id="carousel-example-generic" class="carousel slide col-md-6 col-md-offset-3" data-ride="carousel">
   <!-- Indicators -->
     <ol class="carousel-indicators">
       <% @products.each do |product| %>
@@ -18,8 +18,8 @@
     <div class="carousel-inner" role="listbox">
       <% @products.each do |product| %>
       <div class="item <%= "active" if product == @products.first %>">
-        <div class="carousel-img">
-          <%= image_tag(product.image_url) %>
+        <div>
+          <%= image_tag(product.image_url, class: "carousel-img") %>
         </div> <!-- end carousel-img -->
         <div class="carousel-caption">
           <%= product.name %>
