add collapse to nav bar, update nav layout, fix footer blocking links

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -14,6 +14,6 @@
     <p class="show-product-desc"><%= @product.description %></p>
     <p class="p-margin-center show-price">Price per dozen $ <%= @product.price %></p>
     <p class="p-margin-center show-price-color-code">price color code: <%= @product.colour %></p>
-    <p class="p-margin-center"> <%= link_to 'Edit', edit_product_path(@product) %> | <%= link_to 'Back', products_path %> </p>
+    <p class="p-margin-center"> <%= link_to 'All Products', products_path %> | <%= link_to 'Edit', edit_product_path(@product) %> </p>
   </div>
 </div> <!--end products -->
