--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -4,6 +4,6 @@
   </div>
   <h2>Your source for the best yummy cookies around!</h2>
   <div class="col-md-offset-3 col-md-6 lpimage">
-    <%= image_tag("choc-chip.jpg", class: "img-responsive") %>
+    <%= link_to image_tag("choc-chip.jpg", class: "img-responsive"), products_url %>
   </div> <!-- end col-md-6 -->
 </div> <!--end land-page -->
