--- a/app/assets/stylesheets/navigation.scss
+++ b/app/assets/stylesheets/navigation.scss
@@ -1,9 +1,26 @@
+.navbar {
+  background-color: #ccffcc;
+}
+.nav-menu ul {
+  margin: 0;
+}
 .nav-menu ul li {
   display: inline-block;
-  padding-right: 3%;
 }
-
-.nav-items {
+.navbar-brand {
+  padding-top: 1%;
+}
+.nav-pills {
   font-size: 1.5em;
   color: #8B4513;
+  padding-top: 1%;
+}
+.navbar-toggle .icon-bar {
+  background-color: #8b4513;
+}
+.nav-pills li a:active,
+.nav-pills li a:focus,
+.nav-pills li a:hover {
+    color: #f5f5f5;
+    background-color: darkgreen;
 }
