--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -2,8 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 body {
-  padding-top: 50px;
-  padding-bottom: 50px;
+  padding-top: 5%;
 }
 
 h1,
@@ -26,6 +25,8 @@ p {
 
 .sticky-footer p{
   text-align: center;
+  margin: 1%;
+  background-color: #ccffcc;
 }
 
 .cookie-border {
@@ -40,6 +41,7 @@ p {
   margin-top: 1%;
 }
 .carousel-img {
+  margin-left: 4%;
   height: 400px;
 }
 .carousel-indicators {
