--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,19 +16,34 @@
 
   <body>
     <nav class="navbar navbar-fixed-top nav-menu">
-      <ul class="nav-items">
-        <li> <%= link_to "Home", static_pages_landing_page_path %> </li>
-        <li> <%= link_to "About", static_pages_about_path %> </li>
-        <li> <%= link_to "Products", products_url %> </li>
-        <li> <%= link_to "Contact", static_pages_contact_path %> </li>
-      </ul>
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button> <!--end button navbar -->
+          <div class="navbar-brand">
+            <%= link_to image_tag("yc-logo-sm.png", class: "img-responsive yc-logo-sm"), static_pages_landing_page_path %>
+          </div> <!--end navbar-brand-->
+        </div> <!--end navbar-header -->
+        <div class="collapse navbar-collapse">
+          <ul class="nav nav-pills navbar-right">
+            <li> <%= link_to "Home", static_pages_landing_page_path %> </li>
+            <li> <%= link_to "About", static_pages_about_path %> </li>
+            <li> <%= link_to "Products", products_url %> </li>
+            <li> <%= link_to "Contact", static_pages_contact_path %> </li>
+          </ul>
+        </div> <!-- end collapse navbar-collapse" -->
+      </div> <!-- end container-fluid -->
     </nav>
 
     <%= yield %>
 
     <footer class="navbar-fixed-bottom">
       <div class="container-fluid sticky-footer">
-        <p> &copy 2016 Yummy Cookies ~ 123 Filler St Coventry RI 02816 ~ 401-555-1212 <p>
+        <p class="p-footer"> &copy 2016 Yummy Cookies ~ 123 Filler St Coventry RI 02816 ~ 401-555-1212 <p>
       </div> <!-- end container-fluid -->
     </footer>
   </body>
