--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -31,6 +31,10 @@
   padding: 5% 0;
   text-align: center;
 }
+#notice {
+  font-size: 1.5em;
+  font-style: italic;
+}
 
 .show-price,
 .show-price-color-code {
