--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <div class="col-md-12">
-    <%= image_tag("yc-logo.png", class: "img-responsive col-md-4 col-md-offset-4") %>
+    <%= image_tag("yc-logo.png", class: "yc-logo-lg img-responsive col-md-4 col-md-offset-4") %>
   </div>
 
   <h3> Yummy Cookies! is a web app to demonstrate my proficiency with Ruby on Rails.</h3>
