--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,6 +1,6 @@
 <div class="container-fluid contact-page">
   <div class="col-md-12 yc-logo">
-    <%= image_tag("yc-logo.png", class: "img-responsive col-md-4 col-md-offset-4") %>
+    <%= image_tag("yc-logo.png", class: "yc-logo-lg img-responsive col-md-4 col-md-offset-4") %>
   </div>
 
   <h1> Yummy Cookies! is a web app to demonstrate my proficiency with Ruby on Rails.</h1>
@@ -8,10 +8,10 @@
   <h2 class="brown-h2"> For more information about me and other projects I have done please <a href="http://tracylynhall.bitballoon.com/" target="_blank"> visit my website! </a> </h2>
 
   <div class="contact-form">
-    <h2> To contact me about building a website for you send me a message below: </h2>
-    <div class="col-md-6 col-md-offset-3">
+    <h2> To contact me about building a website for you send me a <a href="https://form.jotform.com/70086699021156" target="_blank"> message here! </a> </h2>
+    <!-- <div class="col-md-6 col-md-offset-3">
       <script type="text/javascript" src="https://form.jotform.com/jsform/70086699021156"></script>
-    </div>
+    </div> -->
   </div> <!-- end contact form -->
 
 </div> <!-- end container-fluid -->
