--- a/app/assets/stylesheets/navigation.scss
+++ b/app/assets/stylesheets/navigation.scss
@@ -24,3 +24,15 @@
     color: #f5f5f5;
     background-color: darkgreen;
 }
+.search-label {
+  margin: 3px 0;
+  font-family: Palatino, Georgia, serif;
+  font-size: 1.25em;
+  color: #8B4513;
+}
+.search-button {
+  background-color: darkgreen;
+  color: #f5f5f5;
+  border-color: black;
+  padding: 2px;
+}
