--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,9 +1,9 @@
-<div class="edit-page col-xs-12 col-sm-12 container-fluid">
+<div class="edit-page container-fluid">
   <h1>Edit Product Info</h1>
 
   <%= render 'form', product: @product %>
 
-  <div class="editpg-show-back col-sm-12">
+  <div class="show-back-links col-sm-12">
     <%= link_to 'Show', @product %> |
     <%= link_to 'Back', products_path %>
   </div>
