--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -51,6 +51,12 @@
   margin: 1% 0;
 }
 
+.show-back-links {
+  margin-top: 1%;
+  font-size: 1.25em;
+  text-align: center;
+}
+
 // Edit Product Page
 .edit-page {
   margin-top: 5%;
@@ -72,8 +78,8 @@
   color: #f5f5f5;
   margin-top: 1%;
 }
-.editpg-show-back {
-  margin-top: 1%;
-  font-size: 1.25em;
-  text-align: center;
+
+// New Product Page
+.new-product-page {
+  margin-top: 5%;
 }
