--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,9 +37,9 @@
           </ul>
           <div class="search-box">
             <%= form_tag("/products", method: "get") do %>
-              <%= label_tag(:q, "Search for:") %>
+              <%= label_tag(:q, "Search Our Cookies:", class: "search-label") %>
               <%= text_field_tag(:q) %>
-              <%= submit_tag("Search") %>
+              <%= submit_tag("Search", class: "btn btn-default search-button") %>
             <% end %>
           </div> <!-- end search-box -->
         </div> <!-- end collapse navbar-collapse" -->
