--- a/app/assets/stylesheets/navigation.scss
+++ b/app/assets/stylesheets/navigation.scss
@@ -11,7 +11,7 @@
   padding-top: 1%;
 }
 .nav-pills {
-  font-size: 1.5em;
+  font-size: 1.3em;
   color: #8B4513;
   padding-top: 1%;
 }
@@ -27,7 +27,7 @@
 .search-label {
   margin: 3px 0;
   font-family: Palatino, Georgia, serif;
-  font-size: 1.25em;
+  // font-size: 1.25em;
   color: #8B4513;
 }
 .search-button {
