--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -14,27 +14,27 @@
 
     <div class="field form-group">
       <%= f.label :name, class: "edit-labels" %>
-      <%= f.text_field :name, class: "form-control" %>
+      <%= f.text_field :name, class: "form-control", placeholder: "Please enter the product name" %>
     </div>
 
     <div class="field form-group">
       <%= f.label :description, class: "edit-labels" %>
-      <%= f.text_area :description, class: "form-control" %>
+      <%= f.text_area :description, class: "form-control", placeholder: "Please enter a description of the product" %>
     </div>
 
     <div class="field form-group">
       <%= f.label :image_url, class: "edit-labels" %>
-      <%= f.text_field :image_url, class: "form-control" %>
+      <%= f.text_field :image_url, class: "form-control", placeholder: "Please enter the product image url" %>
     </div>
 
     <div class="field form-group">
       <%= f.label :colour, class: "edit-labels" %>
-      <%= f.text_field :colour, class: "form-control" %>
+      <%= f.text_field :colour, class: "form-control", placeholder: "Please enter the price color code" %>
     </div>
 
     <div class="field form-group">
       <%= f.label :price, class: "edit-labels" %>
-      <%= f.text_field :price, class: "form-control" %>
+      <%= f.text_field :price, class: "form-control", placeholder: "Please enter the price per dozen" %>
     </div>
 
     <div class="actions">
