--- a/app/views/user_mailer/contact_form.html.erb
+++ b/app/views/user_mailer/contact_form.html.erb
@@ -1,10 +1,16 @@
 <table>
   <tbody>
     <tr>
-      <td><p> You have recieved a new contact form message.  The contents of the message are: </p> </td>
+      <td align="center" bgcolor="#006400" style="padding: 40px 0 30px 0;">
+        <img src="images/yc-logo-sm.png" alt="Yummy Cookies Logo" width="300" height="230" style="display: block;" />
+      </td>
     </tr>
     <tr>
-      <td><p><%= @message %></p></td>
+      <td style="color: #8B4513; font-family: Palatino, Georgia, serif; font-size: 14px;">
+         You have recieved a new contact form message.  The contents of the message are: </td>
+    </tr>
+    <tr>
+      <td style="color: #8B4513; font-family: Palatino, Georgia, serif; font-size: 14px;"><%= @message %></td>
     </tr>
   </tbody>
 </table>
