--- a/app/views/user_mailer/contact_form.html.erb
+++ b/app/views/user_mailer/contact_form.html.erb
@@ -1,16 +1,17 @@
 <table>
   <tbody>
     <tr>
-      <td align="center" bgcolor="#006400" style="padding: 40px 0 30px 0;">
-        <img src="images/yc-logo-sm.png" alt="Yummy Cookies Logo" width="300" height="230" style="display: block;" />
+      <td align="center" style="color: #006400; font-family: Papyrus, Georgia, serif; font-size: 28px;">
+        Yummy Cookies!
       </td>
     </tr>
     <tr>
       <td style="color: #8B4513; font-family: Palatino, Georgia, serif; font-size: 14px;">
-         You have recieved a new contact form message.  The contents of the message are: </td>
+         You have recieved a new Yummy Cookies! contact form message. The contents of the message are:
+       </td>
     </tr>
     <tr>
-      <td style="color: #8B4513; font-family: Palatino, Georgia, serif; font-size: 14px;"><%= @message %></td>
+      <td style="color: #8B4513; font-family: Palatino, Georgia, serif; font-size: 16px;"><%= @message %></td>
     </tr>
   </tbody>
 </table>
