--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,6 +35,17 @@
             <li> <%= link_to "Products", products_url %> </li>
             <li> <%= link_to "Contact", static_pages_contact_path %> </li>
           </ul>
+
+          <ul class="nav pull-right">
+            <li>
+              <% if user_signed_in? %>
+                <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>
+              <% else %>
+                <%= link_to('Login', new_user_session_path) %>
+              <% end %>
+            </li>
+          </ul>
+
           <div class="search-box">
             <%= form_tag("/products", method: "get") do %>
               <%= label_tag(:q, "Search Our Cookies:", class: "search-label") %>
@@ -45,6 +56,9 @@
         </div> <!-- end collapse navbar-collapse" -->
       </div> <!-- end container-fluid -->
     </nav>
+
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
 
     <%= yield %>
 
