--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -57,7 +57,7 @@
       </div> <!-- end container-fluid -->
     </nav>
 
-    <p class="notice"><%= notice %></p>
+    <p id="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
 
     <%= yield %>
