--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,22 @@
 <h2>Forgot your password?</h2>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_error_messages! %>
+<div class="user-form container-fluid col-sm-4 col-sm-offset-4 col-xs-10 col-xs-offset-1">
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
+  <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+    <%= devise_error_messages! %>
 
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
-<% end %>
+    <div class="field">
+      <%= f.label :email, class: "user-labels" %>
+      <%= f.email_field :email, autofocus: true, class: "form-control", placeholder: "Please enter your email" %>
+    </div>
 
-<%= render "devise/shared/links" %>
+    <div class="actions">
+      <%= f.submit "Send me reset password instructions", class: "btn btn-default submit-button" %>
+    </div>
+  <% end %>
+
+</div> <!-- end user-form -->
+
+<div class="shared-links col-sm-12">
+  <%= render "devise/shared/links" %>
+</div>
