--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,27 +1,30 @@
-<%= form_for(user) do |f| %>
-  <% if user.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(user.errors.count, "error") %> prohibited this user from being saved:</h2>
+<div class="user-form container-fluid col-sm-4 col-sm-offset-4 col-xs-10 col-xs-offset-1">
 
-      <ul>
-      <% user.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+  <%= form_for(user) do |f| %>
+    <% if user.errors.any? %>
+      <div id="error_explanation">
+        <h2><%= pluralize(user.errors.count, "error") %> prohibited this user from being saved:</h2>
+
+        <ul>
+        <% user.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+        </ul>
+      </div>
+    <% end %>
+
+    <div class="field form-group">
+      <%= f.label :first_name, class: "user-labels" %>
+      <%= f.text_field :first_name, class: "form-control", placeholder: "Please enter your first name" %>
+    </div>
+
+    <div class="field form-group">
+      <%= f.label :last_name, class: "user-labels" %>
+      <%= f.text_field :last_name, class: "form-control", placeholder: "Please enter your last name" %>
+    </div>
+
+    <div class="actions">
+      <%= f.submit class: "btn btn-default submit-button"%>
     </div>
   <% end %>
-
-  <div class="field">
-    <%= f.label :first_name %>
-    <%= f.text_field :first_name %>
-  </div>
-
-  <div class="field">
-    <%= f.label :last_name %>
-    <%= f.text_field :last_name %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-<% end %>
+</div> <!-- end user-form -->
