--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,4 +2,6 @@
 
 <%= render 'form', user: @user %>
 
-<%= link_to 'Back', users_path %>
+<div class="shared-links col-sm-12">
+  <%= link_to 'Back', users_path %>
+</div>
