--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,14 +1,18 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>First name:</strong>
-  <%= @user.first_name %>
-</p>
+<div class="user-form container-fluid col-sm-4 col-sm-offset-4 col-xs-10 col-xs-offset-1">
+  <h3 class="user-labels">
+    <strong>First name:</strong>
+    <%= @user.first_name %>
+  </h3>
 
-<p>
-  <strong>Last name:</strong>
-  <%= @user.last_name %>
-</p>
+  <h3 class="user-labels">
+    <strong>Last name:</strong>
+    <%= @user.last_name %>
+  </h3>
+</div> <!-- end user-form -->
 
-<%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', users_path %>
+<div class="shared-links col-sm-12">
+  <%= link_to 'Edit', edit_user_path(@user) %> |
+  <%= link_to 'Back', users_path %>
+</div>
