--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -24,6 +24,6 @@
   background-color: saddlebrown;
   color: #f5f5f5;
 }
-.new-user-button a:visited {
+a.new-user-button:visited {
   color: #f5f5f5;
 }
