--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -35,10 +35,13 @@
       </div>
 
       <div class="actions">
-        <%= f.submit "Update", class: "btn btn-default submit-button" %>
-        <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, class: "btn btn-default cancel-button", method: :delete %>
+        <%= f.submit class: "btn btn-default submit-button" %>
       </div>
     <% end %>
+
+    <div>
+      <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, class: "btn btn-default cancel-button", method: :delete %>
+    </div>
 
   </div> <!-- end user-form -->
 
