--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -36,9 +36,12 @@
 }
 
 // Show One Procuct Page
+.show-product {
+  padding-bottom: 5%;
+}
 .show-price,
 .show-price-color-code {
-  // font-size: 1.25em;
+  font-size: 1.25em;
   margin: 1% auto;
 }
 .show-product-desc {
