--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -9,7 +9,8 @@ body {
 }
 
 h1,
-h2 {
+h2,
+h4 {
   text-align: center;
   color: darkgreen;
 }
@@ -18,6 +19,7 @@ h1 {
 }
 h3,
 p {
+  font-family: Palatino, Georgia, serif;
   text-align: center;
   color: #8B4513;
 }
