--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -10,12 +10,14 @@
   <div class="col-md-offset-4 col-md-4">
     <%= image_tag(@product.image_url, class: "img-responsive show-prod-img") %>
   </div>
-  <div class="col-md-12">
+  <div class="col-sm-12">
     <p class="show-product-desc"><%= @product.description %></p>
     <p class="p-margin-center show-price">Price per dozen $ <%= @product.price %> </p>
+    <h4>Average Rating: <div class="rated" data-score="<%= @product.average_rating %>"></div></h4>
     <!-- <p class="p-margin-center show-price-color-code"> price color code: <%= @product.colour %> </p> -->
-    <h4 class="show-rating"> Product Rating goes here </h4>
-    <h4 class="show-product-comment"> Best Comment: <%= @product.highest_rating_comment %> Worst Comment: <%= @product.lowest_rating_comment %> </h4>
-    <p class="p-margin-center"> <%= link_to 'All Products', products_path %> | <%= link_to 'Edit', edit_product_path(@product) %> </p>
+    <%= render partial: "new_comment" %>
+    <!-- <h4 class="show-product-comment"> Best Comment: <%= @product.highest_rating_comment %> Worst Comment: <%= @product.lowest_rating_comment %> </h4> -->
+    <%= render partial: "comments" %>
+    <p class="p-margin-center col-sm-12"> <%= link_to 'All Products', products_path %> | <%= link_to 'Edit', edit_product_path(@product) %> </p>
   </div>
 </div> <!--end show-product -->
