--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -14,3 +14,9 @@
   color: #f5f5f5;
   margin-top: 3%;
 }
+.comment-box {
+  border: 1px solid darkgreen;
+  border-radius: 15px;
+  padding: 1% 2%;
+  margin: 1%;
+}
