--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -50,6 +50,10 @@
   line-height: 1.3em;
   margin: 1% 0;
 }
+.page-numbers {
+  text-align: center;
+  color: darkgreen;
+}
 .show-back-links {
   margin-top: 1%;
   // font-size: 1.25em;
