--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -18,6 +18,9 @@
     <%= render partial: "new_comment" %>
     <!-- <h4 class="show-product-comment"> Best Comment: <%= @product.highest_rating_comment %> Worst Comment: <%= @product.lowest_rating_comment %> </h4> -->
     <%= render partial: "comments" %>
+    <div class="page-numbers col-sm-12">
+      <%= will_paginate @comments %>
+    </div>
     <p class="p-margin-center col-sm-12"> <%= link_to 'All Products', products_path %> | <%= link_to 'Edit', edit_product_path(@product) %> </p>
   </div>
 </div> <!--end show-product -->
