--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,7 @@
-<p id="notice"><%= notice %></p>
+<h1> User Info </h1>
 
 <div class="user-form container-fluid col-sm-4 col-sm-offset-4 col-xs-10 col-xs-offset-1">
+
   <h3 class="user-labels">
     First name:
     <%= @user.first_name %>
