--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,22 +1,25 @@
-<h2>Resend confirmation instructions</h2>
+<div class="container-fluid">
+  <h2>Resend confirmation instructions</h2>
 
-<div class="user-form container-fluid col-sm-4 col-sm-offset-4 col-xs-10 col-xs-offset-1">
+  <div class="user-form col-sm-4 col-sm-offset-4 col-xs-10 col-xs-offset-1">
 
-  <%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
-    <%= devise_error_messages! %>
+    <%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
+      <%= devise_error_messages! %>
 
-    <div class="field">
-      <%= f.label :email, class: "user-labels" %><br />
-      <%= f.email_field :email, class: "form-control", autofocus: true, value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email) %>
-    </div>
+      <div class="field">
+        <%= f.label :email, class: "user-labels" %><br />
+        <%= f.email_field :email, class: "form-control", autofocus: true, value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email) %>
+      </div>
 
-    <div class="actions">
-      <%= f.submit "Resend confirmation instructions", class: "btn btn-default submit-button" %>
-    </div>
-  <% end %>
+      <div class="actions">
+        <%= f.submit "Resend confirmation instructions", class: "btn btn-default submit-button" %>
+      </div>
+    <% end %>
 
-</div> <!-- end user-form -->
+  </div> <!-- end user-form -->
 
-<div class="shared-links col-sm-12">
-  <%= render "devise/shared/links" %>
+  <div class="shared-links col-sm-12">
+    <%= render "devise/shared/links" %>
+  </div>
+
 </div>
