--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,7 +1,7 @@
-<div class="user-edit-form">
+<div class="user-edit-form container-fluid">
   <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
-  <div class="user-form container-fluid col-sm-4 col-sm-offset-4 col-xs-10 col-xs-offset-1">
+  <div class="user-form col-sm-4 col-sm-offset-4 col-xs-10 col-xs-offset-1">
 
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
       <%= devise_error_messages! %>
@@ -19,7 +19,6 @@
         <%= f.label :password, class: "user-labels" %> <i>(leave blank if you don't want to change it)</i><br />
         <%= f.password_field :password, autocomplete: "off", class: "form-control", placeholder: "Please enter your new password" %>
         <% if @minimum_password_length %>
-          <!-- <br /> -->
           <em><%= @minimum_password_length %> characters minimum</em>
         <% end %>
       </div>
