--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,4 @@
+<div class="new-user-form container-fluid">
   <h2> Sign up </h2>
 
   <div class="user-form container-fluid col-sm-4 col-sm-offset-4 col-xs-10 col-xs-offset-1">
@@ -29,6 +30,8 @@
     <% end %>
   </div> <!-- end user-form -->
 
-<div class="shared-links col-sm-12">
-  <%= render "devise/shared/links" %>
-</div>
+  <div class="shared-links col-sm-12">
+    <%= render "devise/shared/links" %>
+  </div>
+
+</div> <!-- end new-user-form -->
