--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,17 +1,18 @@
-<p id="notice"><%= notice %></p>
+<div class="container-fluid">
+  <div class="col-md-12">
+    <%= image_tag("yc-logo.png", class: "img-responsive col-md-4 col-md-offset-4") %>
+  </div>
 
-<div class="col-md-12">
-  <%= image_tag("yc-logo.png", class: "img-responsive col-md-4 col-md-offset-4") %>
+  <div class="product-page">
+
+    <%= render @products %>
+
+    <div class="new-prod-link col-md-12">
+      <% if can? :create, @product %>
+        <%= link_to 'New Product', new_product_path, :class => "btn btn-warning btn-lg" %>
+      <% end %>
+    </div> <!-- end new-prod-link -->
+
+  </div> <!-- end product-page -->
+
 </div>
-
-<div class="product-page">
-
-  <%= render @products %>
-
-  <div class="new-prod-link col-md-12">
-    <% if can? :create, @product %>
-      <%= link_to 'New Product', new_product_path, :class => "btn btn-warning btn-lg" %>
-    <% end %>
-  </div> <!-- end new-prod-link -->
-
-</div> <!-- end product-page -->
