--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,27 +1,29 @@
-<p id="notice"><%= notice %></p>
+<div class="container-fluid">
 
-<div class="col-md-12">
-  <%= image_tag("yc-logo.png", class: "img-responsive col-md-4 col-md-offset-4") %>
-</div>
-<!-- Display Product info -->
-<div class="show-product col-md-12">
-  <h2 class="product-name"><%= @product.name %></h2>
-  <div class="col-md-offset-4 col-md-4">
-    <%= image_tag(@product.image_url, class: "img-responsive show-prod-img") %>
+  <div class="col-md-12">
+    <%= image_tag("yc-logo.png", class: "img-responsive col-md-4 col-md-offset-4") %>
   </div>
-  <div class="col-sm-12">
-    <p class="show-product-desc"><%= @product.description %></p>
-    <p class="p-margin-center show-price">Price per dozen $ <%= @product.price %> </p>
-    <h4>Average Rating: <div class="rated" data-score="<%= @product.average_rating %>"></div></h4>
-    <!-- <p class="p-margin-center show-price-color-code"> price color code: <%= @product.colour %> </p> -->
-    <!-- <div class="col-sm-12">
-      <h4 class="show-product-comment"> Best Comment: <%= @product.highest_rating_comment %> Worst Comment: <%= @product.lowest_rating_comment %> </h4>
-    </div> -->
-    <%= render partial: "new_comment" %>
-    <%= render partial: "comments" %>
-    <div class="page-numbers col-sm-12">
-      <%= will_paginate @comments %>
+  <!-- Display Product info -->
+  <div class="show-product col-md-12">
+    <h2 class="product-name"><%= @product.name %></h2>
+    <div class="col-md-offset-4 col-md-4">
+      <%= image_tag(@product.image_url, class: "img-responsive show-prod-img") %>
     </div>
-    <p class="p-margin-center col-sm-12"> <%= link_to 'All Products', products_path %> </p>
-  </div>
-</div> <!--end show-product -->
+    <div class="col-sm-12">
+      <p class="show-product-desc"><%= @product.description %></p>
+      <p class="p-margin-center show-price">Price per dozen $ <%= @product.price %> </p>
+      <h4>Average Rating: <div class="rated" data-score="<%= @product.average_rating %>"></div></h4>
+      <!-- <p class="p-margin-center show-price-color-code"> price color code: <%= @product.colour %> </p> -->
+      <!-- <div class="col-sm-12">
+        <h4 class="show-product-comment"> Best Comment: <%= @product.highest_rating_comment %> Worst Comment: <%= @product.lowest_rating_comment %> </h4>
+      </div> -->
+      <%= render partial: "new_comment" %>
+      <%= render partial: "comments" %>
+      <div class="page-numbers col-sm-12">
+        <%= will_paginate @comments %>
+      </div>
+      <p class="p-margin-center col-sm-12"> <%= link_to 'All Products', products_path %> </p>
+    </div>
+  </div> <!--end show-product -->
+
+</div>
