--- a/app/views/static_pages/thank_you.html.erb
+++ b/app/views/static_pages/thank_you.html.erb
@@ -1,4 +1,4 @@
-<div class="container-fluid thank-you-page">
+<div class="thank-you-page container-fluid">
   <div class="col-md-12 yc-logo">
     <%= image_tag("yc-logo.png", class: "yc-logo img-responsive col-md-4 col-md-offset-4") %>
   </div>
@@ -6,4 +6,10 @@
   <div class="thank-you-message">
       <h3> Thank you! We have recieved your message and will get back to you as soon as possible. </h3>
   </div> <!-- end thank-you-message -->
-</div> <!-- end container-fluid thank-you-page -->
+
+  <div class="show-back-links col-sm-12">
+    <h4> <%= link_to 'Back to Cookies', products_path %> |
+    <%= link_to 'Back to Contact', static_pages_contact_path %></h4>
+  </div>
+
+</div> <!-- end thank-you-page -->
