--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,8 +1,10 @@
-<h1>Editing User</h1>
+<div class="conatiner-fluid">
+  <h1>Editing User</h1>
 
-<%= render 'form', user: @user %>
+  <%= render 'form', user: @user %>
 
-<div class="shared-links col-sm-12">
-  <%= link_to 'Show', @user %> |
-  <%= link_to 'Back', users_path %>
-</div>
+  <div class="shared-links col-sm-12">
+    <%= link_to 'Show', @user %> |
+    <%= link_to 'Back', users_path %>
+  </div>
+</div> <!--end user-form -->
