--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -58,6 +58,9 @@
   margin-top: 1%;
   text-align: center;
 }
+.show-product-comment {
+  font-size: 1.25em;
+}
 
 // Edit Product Page
 .edit-page {
