--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -50,6 +50,13 @@
   line-height: 1.3em;
   margin: 1% 0;
 }
+.pay-button {
+  text-align: center;
+  padding-bottom: 1%;
+}
+.show-product-comment {
+  font-size: 1.25em;
+}
 .page-numbers {
   text-align: center;
   color: darkgreen;
@@ -57,9 +64,6 @@
 .show-back-links {
   margin-top: 1%;
   text-align: center;
-}
-.show-product-comment {
-  font-size: 1.25em;
 }
 
 // Edit Product Page
