--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -33,8 +33,8 @@
     </div>
 
     <div class="field form-group">
-      <%= f.label :price, class: "edit-labels" %>
-      <%= f.text_field :price, class: "form-control", placeholder: "Please enter the price per dozen" %>
+      <%= f.label :price_in_cents, class: "edit-labels" %>
+      <%= f.text_field :price_in_cents, class: "form-control", placeholder: "Please enter the price per dozen in cents" %>
     </div>
 
     <div class="actions">
