--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -9,9 +9,17 @@
     <div class="col-md-offset-4 col-md-4">
       <%= image_tag(@product.image_url, class: "img-responsive show-prod-img") %>
     </div>
+
     <div class="col-sm-12">
       <p class="show-product-desc"><%= @product.description %></p>
-      <p class="p-margin-center show-price">Price per dozen $ <%= @product.price %> </p>
+      <p class="p-margin-center show-price">Price per dozen $ <%= number_with_precision(@product.price_in_cents * 0.01, :precision =>2)%> </p>
+
+      <div class="pay-button col-sm-12">
+        <%= form_tag "/payments/create" do %>
+          <%= render partial: "shared/stripe_checkout_button" %>
+        <% end %>
+      </div> <!-- end pay-button -->
+
       <h4>Average Rating: <div class="rated" data-score="<%= @product.average_rating %>"></div></h4>
       <!-- <p class="p-margin-center show-price-color-code"> price color code: <%= @product.colour %> </p> -->
       <div class="col-sm-12">
