add payments controller, create order on payment

--- a/app/views/payments/create.html.erb
+++ b/app/views/payments/create.html.erb
@@ -4,7 +4,7 @@
   </div>
 
   <div class="thank-you-message">
-      <h3> Thank you for your order! </h3>
+      <h3> Thank you for your order of one dozen <%= @product.name %> cookies! </h3>
   </div> <!-- end thank-you-message -->
 
   <div class="show-back-links col-sm-12">
