--- a/app/views/shared/_stripe_checkout_button.html.erb
+++ b/app/views/shared/_stripe_checkout_button.html.erb
@@ -3,7 +3,7 @@
   data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
   data-image="<%= image_path(@product.image_url) %>"
   data-name="Yummy Cookies!"
-  data-description="1 dozen <%= @product.name %>"
+  data-email="<%= current_user.email %>"
+  data-description="1 dozen <%= @product.name %> cookies"
   data-amount="<%= @product.price_in_cents %>">
 </script>
-<%= hidden_field_tag :product_id, @product.id %>
